data/derived/sp14/progs/unify/prog1211.ml.out
Characters 28-29:
  let _ = [9;9;9;9]::([0;0]::[1;1]);;
                              ^
Error: This expression has type int but an expression was expected of type
         int list
